--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
             <button data-menu-open class="burger-button" type="button">
-                <img class="burger-button__icon" src="/images/mobile-images/burger-icon.svg" alt="burger-icon">
+                <img class="burger-button__icon" src="./images/mobile-images/burger-icon.svg" alt="burger-icon">
             </button>
             <address class="address">
                 <ul class="address__list list">
