--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <li>
                             <picture>
                                 <source srcset="./images/mobile-images/mobile__our-team-1@2x.jpg">
-                                <img class="team__img" src="./images/our-team/OurT-img1.jpg"alt="men with beard">
+                                <img class="team__img" src="./images/our-team/OurT-img1.jpg" alt="men with beard">
                             </picture>
                             <div class="team__summarizing">
                                 <h3 class="team__name">Mark Guerrero</h3>
@@ -257,7 +257,7 @@
                         <li>
                             <picture>
                                 <source srcset="./images/mobile-images/mobile__our-team-2@2x.jpg">
-                                <img class="team__img" src="./images/our-team/OurT-img2.jpg"alt="men with short beard">    
+                                <img class="team__img" src="./images/our-team/OurT-img2.jpg" alt="men with short beard">    
                             </picture>
                             <div class="team__summarizing">
                                 <h3 class="team__name">Tom Ford</h3>
@@ -297,7 +297,7 @@
                         <li>
                             <picture>
                                 <source srcset="./images/mobile-images/mobile__our-team-3@2x.jpg">
-                                <img class="team__img" src="./images/our-team/OurT-img3.jpg"alt="wooman">    
+                                <img class="team__img" src="./images/our-team/OurT-img3.jpg" alt="wooman">    
                             </picture>
                             <div class="team__summarizing">
                                 <h3 class="team__name">Camila Garcia</h3>
@@ -546,10 +546,10 @@
                             <svg class="modal-checkbox-icon-svg">
                                 <use href="./images/sprite.svg#icon-modal-checkbox"></use>
                             </svg></span>
-                        <div class="modal-form-checbox-text-wrapper">
+                        <span class="modal-form-checbox-text-wrapper">
                             I accept the terms and conditions of the&nbsp;<a class="form-privacy-policy-link"
                                 href="">Privacy Policy</a>
-                        </div>
+                        </span>
                     </label>
                     <button class="form-submit-btn main-btn" type="submit">Send</button>
                 </form>
